@@ -3,6 +3,7 @@ package com.imechanic.backend.project.service;
 import com.auth0.jwt.interfaces.DecodedJWT;
 import com.imechanic.backend.project.controller.dto.*;
 import com.imechanic.backend.project.enumeration.EstadoOrden;
+import com.imechanic.backend.project.enumeration.EstadoServicio;
 import com.imechanic.backend.project.enumeration.Role;
 import com.imechanic.backend.project.exception.EntidadNoEncontrada;
 import com.imechanic.backend.project.exception.PasoYaCompletado;
@@ -12,6 +13,7 @@ import com.imechanic.backend.project.repository.*;
 import com.imechanic.backend.project.security.util.JwtAuthenticationManager;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.ResponseEntity;
 import org.springframework.mail.SimpleMailMessage;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -22,7 +24,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.text.SimpleDateFormat;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -104,12 +108,13 @@ public class MecanicoService {
         List<Servicio> serviciosSeleccionados = mecanicoDTORequest.getServicioIds().stream()
                 .map(servicioId -> servicioRepository.findById(servicioId)
                         .orElseThrow(() -> new EntidadNoEncontrada("No se encontró el servicio con ID: " + servicioId)))
-                .collect(Collectors.toList());
+                .toList();
 
         Mecanico mecanico = Mecanico.builder()
                 .nombre(mecanicoDTORequest.getNombre())
                 .correoElectronico(mecanicoDTORequest.getCorreoElectronico())
                 .contrasenia(passwordEncoder.encode(mecanicoDTORequest.getContrasenia()))
+                .telefono(mecanicoDTORequest.getTelefono())
                 .role(Role.MECANICO)
                 .cuenta(cuenta)
                 .isEnabled(true)
@@ -223,32 +228,59 @@ public class MecanicoService {
                 new ServicioDTO(servicio.getId(), servicio.getNombre()),
                 servicio.getEstadoServicio().toString(),
                 new MecanicoDTOList(mecanico.getId(), mecanico.getNombre()),
+                mecanico.getTelefono(),
                 nombrePasos);
     }
 
-    @Transactional(readOnly = true)
-    public String iniciarServicioOrden(DecodedJWT decodedJWT, Long orderId) {
+    @Transactional
+    public ResponseEntity<Map<String, String>> iniciarServicioOrden(DecodedJWT decodedJWT, Long orderId, Long serviceId) {
         String roleName = jwtAuthenticationManager.getUserRole(decodedJWT);
 
-        if (!roleName.equals("MECANICO") && !roleName.equals("TALLER")) {
-            throw new RoleNotAuthorized("El rol del usuario no es 'MECANICO' ni 'TALLER'");
+        if (!roleName.equals("MECANICO")) {
+            throw new RoleNotAuthorized("El rol del usuario no es 'MECANICO'");
         }
 
         OrdenTrabajo ordenTrabajo = ordenTrabajoRepository.findById(orderId)
                 .orElseThrow(() -> new EntidadNoEncontrada("Orden de trabajo con ID: " + orderId + " no encontrada"));
 
+        // Validar la existencia del serviceId en la lista de serviciosMecanicos de la orden
+        ServicioMecanico servicioMecanico = ordenTrabajo.getServiciosMecanicos().stream()
+                .filter(sm -> sm.getServicio().getId().equals(serviceId))
+                .findFirst()
+                .orElseThrow(() -> new EntidadNoEncontrada("Servicio con ID: " + serviceId + " no encontrado en la orden de trabajo con ID: " + orderId));
+
+        // Cambiar el estado del servicio identificado si está EN_ESPERA a EN_PROCESO
+        if (servicioMecanico.getServicio().getEstadoServicio() == EstadoServicio.EN_ESPERA) {
+            servicioMecanico.getServicio().setEstadoServicio(EstadoServicio.EN_PROCESO);
+        }
+
+        // Verificar que al menos un servicio tenga el estado EN_PROCESO
+        boolean anyServiceInProgress = ordenTrabajo.getServiciosMecanicos().stream()
+                .anyMatch(sm -> sm.getServicio().getEstadoServicio() == EstadoServicio.EN_PROCESO);
+
+        Map<String, String> response = new HashMap<>();
+
+        // Cambiar el estado de la orden a EN_PROCESO si está en EN_ESPERA y al menos un servicio está EN_PROCESO
+        if (anyServiceInProgress && ordenTrabajo.getEstado() == EstadoOrden.EN_ESPERA) {
+            ordenTrabajo.setEstado(EstadoOrden.EN_PROCESO);
+            ordenTrabajoRepository.save(ordenTrabajo);
+            response.put("message", "ESTADO DE ORDEN ACTUALIZADO A: " + ordenTrabajo.getEstado());
+            return ResponseEntity.ok(response);
+        }
+
         if (ordenTrabajo.getEstado() == EstadoOrden.EN_PROCESO) {
-            return "ESTADO DE ORDEN ACTUALIZADA 1: " + ordenTrabajo.getEstado();
+            ordenTrabajoRepository.save(ordenTrabajo); // Save changes to services
+            response.put("message", "SERVICIO INICIADO Y ORDEN YA ESTÁ EN PROCESO");
+            return ResponseEntity.ok(response);
+        } else if (ordenTrabajo.getEstado() == EstadoOrden.FINALIZADO) {
+            response.put("message", "NO SE PUEDE INICIAR SERVICIO, SERVICIO YA FINALIZADO");
+            return ResponseEntity.ok(response);
         }
 
-        if (ordenTrabajo.getEstado() == EstadoOrden.FINALIZADO) {
-            return "ESTADO DE ORDEN ACTUALIZADA 2: "+ ordenTrabajo.getEstado();
-        }
-
-        ordenTrabajo.setEstado(EstadoOrden.EN_PROCESO);
-        ordenTrabajoRepository.save(ordenTrabajo);
-        return "ESTADO DE ORDEN ACTUALIZADA 3: " + ordenTrabajo.getEstado();
+        response.put("message", "NO HAY SERVICIOS EN PROCESO PARA ACTUALIZAR EL ESTADO DE LA ORDEN");
+        return ResponseEntity.ok(response);
     }
+
 
     @Transactional
     public MecanicoPasoDTO completarPaso(DecodedJWT decodedJWT, Long ordenId, Long servicioId, Long pasoId) {
@@ -325,20 +357,55 @@ public class MecanicoService {
                 .collect(Collectors.toList());
     }
 
-    @Transactional(readOnly = true)
-    public String terminarServicioOrden(DecodedJWT decodedJWT, Long orderId) {
+    @Transactional
+    public ResponseEntity<Map<String, String>> terminarServicioOrden(DecodedJWT decodedJWT, Long orderId, Long serviceId) {
         String roleName = jwtAuthenticationManager.getUserRole(decodedJWT);
 
-        if (!roleName.equals("MECANICO") && !roleName.equals("TALLER")) {
-            throw new RoleNotAuthorized("El rol del usuario no es 'MECANICO' ni 'TALLER'");
+        if (!roleName.equals("MECANICO")) {
+            throw new RoleNotAuthorized("El rol del usuario no es 'MECANICO'");
         }
 
         OrdenTrabajo ordenTrabajo = ordenTrabajoRepository.findById(orderId)
                 .orElseThrow(() -> new EntidadNoEncontrada("Orden de trabajo con ID: " + orderId + " no encontrada"));
 
-        ordenTrabajo.setEstado(EstadoOrden.FINALIZADO);
-        ordenTrabajoRepository.save(ordenTrabajo);
+        // Validar la existencia del serviceId en la lista de serviciosMecanicos de la orden
+        ServicioMecanico servicioMecanico = ordenTrabajo.getServiciosMecanicos().stream()
+                .filter(sm -> sm.getServicio().getId().equals(serviceId))
+                .findFirst()
+                .orElseThrow(() -> new EntidadNoEncontrada("Servicio con ID: " + serviceId + " no encontrado en la orden de trabajo con ID: " + orderId));
 
-        return "Estado actualizado: " + ordenTrabajo.getEstado();
+
+        Map<String, String> response = new HashMap<>();
+
+        // Cambiar el estado del servicio identificado si está EN_PROCESO a FINALIZADO
+        if (servicioMecanico.getServicio().getEstadoServicio() == EstadoServicio.EN_PROCESO) {
+            servicioMecanico.getServicio().setEstadoServicio(EstadoServicio.FINALIZADO);
+        } else {
+            response.put("message", "El servicio con ID: " + serviceId + " no está en proceso, no se puede finalizar");
+            return ResponseEntity.ok(response);
+        }
+
+        // Verificar que todos los servicios de la orden estén en estado FINALIZADO
+        boolean allServicesFinalized = ordenTrabajo.getServiciosMecanicos().stream()
+                .allMatch(sm -> sm.getServicio().getEstadoServicio() == EstadoServicio.FINALIZADO);
+
+        // Cambiar el estado de la orden a FINALIZADO si todos los servicios están FINALIZADOS
+        if (allServicesFinalized) {
+            if (ordenTrabajo.getEstado() == EstadoOrden.EN_PROCESO) {
+                ordenTrabajo.setEstado(EstadoOrden.FINALIZADO);
+                ordenTrabajoRepository.save(ordenTrabajo);
+                response.put("message", "ESTADO DE ORDEN ACTUALIZADO A: " + ordenTrabajo.getEstado());
+                return ResponseEntity.ok(response);
+            } else if (ordenTrabajo.getEstado() == EstadoOrden.EN_ESPERA) {
+                response.put("message", "NO SE PUEDE FINALIZAR SERVICIO, ORDEN AÚN EN ESPERA");
+                return ResponseEntity.ok(response);
+            } else if (ordenTrabajo.getEstado() == EstadoOrden.FINALIZADO) {
+                response.put("message", "ESTADO DE LA ORDEN YA ESTÁ FINALIZADO");
+                return ResponseEntity.ok(response);
+            }
+        }
+
+        response.put("message", "El estado del servicio ha sido actualizado a FINALIZADO, pero la orden no se puede finalizar porque no todos los servicios están finalizados.");
+        return ResponseEntity.ok(response);
     }
 }
